--- a/api-express-mongoose/package.json
+++ b/api-express-mongoose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongoose-node",
+  "name": "api-express-mongoose",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,11 +12,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
-  },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
